--- a/solution2.html
+++ b/solution2.html
@@ -18,7 +18,7 @@
 
     <!-- Contenu principal -->
     <div class="container">
-        <h1>Kalydian - Master key portée par le coffre</h1>
+        <h1>Kalydian - Master key portée par le profil</h1>
 
         <!-- Boutons d'ajout -->
         <div class="actions">
